--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -98,9 +98,22 @@ h3{
 }
 
 #remove{
-    margin-left: 1rem;
+    margin-left: .5rem;
     display: flex;
     align-items: center;
+}
+
+#favIcon{
+    transform: scale(1.3);
+    overflow: hidden;
+}
+
+#favIcon:hover{
+    cursor: pointer;
+}
+
+.favDiv{
+    overflow: hidden;
 }
 
 #remove:hover{
@@ -109,9 +122,20 @@ h3{
     border: none;
 }
 
+.evolName{
+    width: 100%;
+    text-align: center;
+}
+
+.evolName:hover{
+    cursor: pointer;
+    color: grey;
+}
+
 #favItem:hover{
     cursor: pointer;
     color: gray;
+    display: flex;
 }
 
 .evolImgs{
@@ -124,16 +148,22 @@ footer h2{
 
 .scrollBlock{
     max-height: 200px;
-    overflow-y: auto;
+    overflow: scroll;
+    scrollbar-color: black gray;
+    scrollbar-width: auto;
 }
 .scrollBlockBIG{
     max-height: 400px;
-    overflow-y: auto;
+    overflow: scroll;
+    scrollbar-color: black gray;
+    scrollbar-width: auto;
 }
 
 .evolBlock{
-    max-height: 50px;
-    overflow-y: auto;
+    max-height: fit-content;
+    max-width: 500px;
+    overflow: scroll;
+    gap: 2rem;
 }
 
 ul {
@@ -144,14 +174,13 @@ li{
     font-size: 22px;
 }
 
+#evolList{
+    display: flex;
+}
+
 footer{
     margin: 2rem 0rem;
 }
-
-.card
-    {
-        overflow: hidden;
-    }
 
 @media screen and (max-width: 1283px) {
     #pokeImg{
@@ -180,14 +209,30 @@ footer{
         max-height: 100px !important;
     }
 
+    .evolBlock{
+        max-width: 400px;
+    }
+
     .scrollBlock
     {
         max-height: 150px;
     }
 
+    #favItem{
+        display: none;
+    }
+
+    #favIcon{
+        transform: scale(1.3);
+    }
+
     #pokeImg{
         min-width: fit-content;
         transform: scale(1.6);
+    }
+
+    .card{
+        padding: .5rem;
     }
 
     h1{
@@ -214,6 +259,10 @@ footer{
 
 @media screen and (max-width: 640px) {
 
+    #favItem{
+        display: block;
+    }
+
     h1{
         font-size: 56px;
     }
@@ -226,12 +275,17 @@ footer{
         font-size: 28px;
     }
 
+    .scrollBlock{
+        max-height: 300px;
+    }
+
     #TitleText{
         font-size: 48px;
     }
 
     .evolBlock{
         max-height: fit-content;
+        max-width: 530px;
     }
 
     .scrollBlockBIG{
