--- a/src/output.css
+++ b/src/output.css
@@ -533,6 +533,9 @@
   .relative {
     position: relative;
   }
+  .col-\[1\/2\] {
+    grid-column: 1/2;
+  }
   .col-\[1\] {
     grid-column: 1;
   }
@@ -629,8 +632,14 @@
   .grid-cols-\[repeat\(3\,1fr\)\] {
     grid-template-columns: repeat(3,1fr);
   }
+  .grid-cols-\[repeat\(3\,auto\)\] {
+    grid-template-columns: repeat(3,auto);
+  }
   .grid-cols-\[repeat\(4\,1fr\)\] {
     grid-template-columns: repeat(4,1fr);
+  }
+  .grid-cols-\[repeat\(4\,auto\)\] {
+    grid-template-columns: repeat(4,auto);
   }
   .grid-rows-\[repeat\(2\,auto\)\] {
     grid-template-rows: repeat(2,auto);
@@ -644,8 +653,20 @@
   .flex-col-reverse {
     flex-direction: column-reverse;
   }
+  .flex-row {
+    flex-direction: row;
+  }
   .items-center {
     align-items: center;
+  }
+  .justify-around {
+    justify-content: space-around;
+  }
+  .justify-between {
+    justify-content: space-between;
+  }
+  .justify-center {
+    justify-content: center;
   }
   .justify-end {
     justify-content: flex-end;
@@ -665,6 +686,9 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .text-center {
+    text-align: center;
   }
   .text-clip {
     text-overflow: clip;
@@ -775,14 +799,39 @@
       gap: calc(var(--spacing) * 4);
     }
   }
+  .lg\:col-\[1\/1\] {
+    @media (width >= 64rem) {
+      grid-column: 1/1;
+    }
+  }
+  .lg\:col-\[1\/3\] {
+    @media (width >= 64rem) {
+      grid-column: 1/3;
+    }
+  }
+  .lg\:col-\[1\/4\] {
+    @media (width >= 64rem) {
+      grid-column: 1/4;
+    }
+  }
   .lg\:col-\[1\] {
     @media (width >= 64rem) {
       grid-column: 1;
     }
   }
+  .lg\:col-\[2\/4\] {
+    @media (width >= 64rem) {
+      grid-column: 2/4;
+    }
+  }
   .lg\:col-\[3\] {
     @media (width >= 64rem) {
       grid-column: 3;
+    }
+  }
+  .lg\:col-\[span-2\] {
+    @media (width >= 64rem) {
+      grid-column: span-2;
     }
   }
   .lg\:col-span-1 {
@@ -793,6 +842,16 @@
   .lg\:col-span-2 {
     @media (width >= 64rem) {
       grid-column: span 2 / span 2;
+    }
+  }
+  .lg\:col-span-3 {
+    @media (width >= 64rem) {
+      grid-column: span 3 / span 3;
+    }
+  }
+  .lg\:col-span-4 {
+    @media (width >= 64rem) {
+      grid-column: span 4 / span 4;
     }
   }
   .lg\:row-span-2 {
@@ -810,6 +869,11 @@
       grid-template-columns: repeat(2,auto);
     }
   }
+  .lg\:grid-cols-\[repeat\(4\,1fr\)\] {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(4,1fr);
+    }
+  }
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
@@ -818,6 +882,12 @@
   .lg\:justify-end {
     @media (width >= 64rem) {
       justify-content: flex-end;
+    }
+  }
+  .lg\:text-3xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
 }
