--- a/src/output.css
+++ b/src/output.css
@@ -533,26 +533,14 @@
   .relative {
     position: relative;
   }
-  .col-\[1\/2\] {
-    grid-column: 1/2;
+  .z-0 {
+    z-index: 0;
   }
-  .col-\[1\] {
-    grid-column: 1;
-  }
-  .col-\[2\/3\] {
-    grid-column: 2/3;
-  }
-  .col-\[2\/4\] {
-    grid-column: 2/4;
-  }
-  .col-\[2\] {
-    grid-column: 2;
+  .z-10 {
+    z-index: 10;
   }
   .col-\[3\] {
     grid-column: 3;
-  }
-  .col-span-1 {
-    grid-column: span 1 / span 1;
   }
   .col-span-2 {
     grid-column: span 2 / span 2;
@@ -608,6 +596,9 @@
   .table {
     display: table;
   }
+  .h-fit {
+    height: fit-content;
+  }
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
@@ -635,9 +626,6 @@
   .grid-cols-\[repeat\(3\,auto\)\] {
     grid-template-columns: repeat(3,auto);
   }
-  .grid-cols-\[repeat\(4\,1fr\)\] {
-    grid-template-columns: repeat(4,1fr);
-  }
   .grid-cols-\[repeat\(4\,auto\)\] {
     grid-template-columns: repeat(4,auto);
   }
@@ -653,17 +641,8 @@
   .flex-col-reverse {
     flex-direction: column-reverse;
   }
-  .flex-row {
-    flex-direction: row;
-  }
   .items-center {
     align-items: center;
-  }
-  .justify-around {
-    justify-content: space-around;
-  }
-  .justify-between {
-    justify-content: space-between;
   }
   .justify-center {
     justify-content: center;
@@ -674,9 +653,6 @@
   .justify-evenly {
     justify-content: space-evenly;
   }
-  .justify-start {
-    justify-content: flex-start;
-  }
   .gap-0 {
     gap: calc(var(--spacing) * 0);
   }
@@ -686,9 +662,6 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
-  }
-  .text-center {
-    text-align: center;
   }
   .text-clip {
     text-overflow: clip;
@@ -724,29 +697,9 @@
       grid-column: span 1 / span 1;
     }
   }
-  .sm\:col-span-2 {
-    @media (width >= 40rem) {
-      grid-column: span 2 / span 2;
-    }
-  }
-  .sm\:col-span-3 {
-    @media (width >= 40rem) {
-      grid-column: span 3 / span 3;
-    }
-  }
-  .sm\:row-span-1 {
-    @media (width >= 40rem) {
-      grid-row: span 1 / span 1;
-    }
-  }
   .sm\:row-span-2 {
     @media (width >= 40rem) {
       grid-row: span 2 / span 2;
-    }
-  }
-  .sm\:grid {
-    @media (width >= 40rem) {
-      display: grid;
     }
   }
   .sm\:hidden {
@@ -759,34 +712,19 @@
       height: fit-content;
     }
   }
+  .sm\:grid-cols-\[repeat\(2\,1fr\)\] {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(2,1fr);
+    }
+  }
   .sm\:grid-cols-\[repeat\(2\,auto\)\] {
     @media (width >= 40rem) {
       grid-template-columns: repeat(2,auto);
     }
   }
-  .sm\:grid-cols-\[repeat\(3\,1fr\)\] {
-    @media (width >= 40rem) {
-      grid-template-columns: repeat(3,1fr);
-    }
-  }
-  .sm\:grid-cols-\[repeat\,3\] {
-    @media (width >= 40rem) {
-      grid-template-columns: repeat,3;
-    }
-  }
-  .sm\:grid-cols-\[repeat\,\] {
-    @media (width >= 40rem) {
-      grid-template-columns: repeat,;
-    }
-  }
   .sm\:flex-row {
     @media (width >= 40rem) {
       flex-direction: row;
-    }
-  }
-  .sm\:justify-center {
-    @media (width >= 40rem) {
-      justify-content: center;
     }
   }
   .sm\:justify-start {
@@ -799,81 +737,6 @@
       gap: calc(var(--spacing) * 4);
     }
   }
-  .lg\:col-\[1\/1\] {
-    @media (width >= 64rem) {
-      grid-column: 1/1;
-    }
-  }
-  .lg\:col-\[1\/3\] {
-    @media (width >= 64rem) {
-      grid-column: 1/3;
-    }
-  }
-  .lg\:col-\[1\/4\] {
-    @media (width >= 64rem) {
-      grid-column: 1/4;
-    }
-  }
-  .lg\:col-\[1\] {
-    @media (width >= 64rem) {
-      grid-column: 1;
-    }
-  }
-  .lg\:col-\[2\/4\] {
-    @media (width >= 64rem) {
-      grid-column: 2/4;
-    }
-  }
-  .lg\:col-\[3\] {
-    @media (width >= 64rem) {
-      grid-column: 3;
-    }
-  }
-  .lg\:col-\[span-2\] {
-    @media (width >= 64rem) {
-      grid-column: span-2;
-    }
-  }
-  .lg\:col-span-1 {
-    @media (width >= 64rem) {
-      grid-column: span 1 / span 1;
-    }
-  }
-  .lg\:col-span-2 {
-    @media (width >= 64rem) {
-      grid-column: span 2 / span 2;
-    }
-  }
-  .lg\:col-span-3 {
-    @media (width >= 64rem) {
-      grid-column: span 3 / span 3;
-    }
-  }
-  .lg\:col-span-4 {
-    @media (width >= 64rem) {
-      grid-column: span 4 / span 4;
-    }
-  }
-  .lg\:row-span-2 {
-    @media (width >= 64rem) {
-      grid-row: span 2 / span 2;
-    }
-  }
-  .lg\:h-fit {
-    @media (width >= 64rem) {
-      height: fit-content;
-    }
-  }
-  .lg\:grid-cols-\[repeat\(2\,auto\)\] {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(2,auto);
-    }
-  }
-  .lg\:grid-cols-\[repeat\(4\,1fr\)\] {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(4,1fr);
-    }
-  }
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
@@ -882,12 +745,6 @@
   .lg\:justify-end {
     @media (width >= 64rem) {
       justify-content: flex-end;
-    }
-  }
-  .lg\:text-3xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-3xl);
-      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
 }
